# warta-juge-tes-potes

./: Cargo.toml  funny_words.txt  questions.ron
src/: id_gen.rs  main.rs
static/: index.html  main.css  main.js
