[package]
name = "warta-juge-tes-potes"
version = "0.1.0"
authors = ["Thibault Bustarret <thibaultbustarret@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
itertools = "0.10"
tokio = { version = "1.4.0", features = ["macros"] }
ws-hotel = { git = "https://github.com/edgarogh/ws-hotel", branch = "early-dev" }
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
ron = "0.8"
rand = "0.8"
